--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,45 @@
+@import '../node_modules/github-markdown-css/github-markdown-light.css';
+@import '../node_modules/prism-themes/themes/prism-one-light.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  /* background-color: #f8f9fa; */
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue',
+    'Apple SD Gothic Neo', 'Malgun Gothic', '맑은 고딕', 나눔고딕,
+    'Nanum Gothic', 'Noto Sans KR', 'Noto Sans CJK KR', arial, 돋움, Dotum,
+    Tahoma, Geneva, sans-serif;
+}
+
+.markdown-body pre {
+  font-size: 13px;
+}
+
+.markdown-body ul {
+  list-style: initial;
+  margin: initial;
+  padding: 0 0 0 40px;
+}
+.markdown-body ul li {
+  display: list-item;
+}
+
+.markdown-body ol {
+  list-style-type: decimal;
+  margin: initial;
+  padding: 0 0 0 40px;
+}
+
+.markdown-body ol li {
+  display: list-item;
+}
+
+.markdown-body p > img {
+  /* width: 100%;
+  height: 400px;
+  object-fit: cover; */
+  /* text-align: center; */
+  box-shadow: 8px 8px 8px 2px rgba(0, 0, 0, 0.82);
+}
